test/testdata/classes/methods/static/field_shadows_method.lox
class Foo {
  static bar() {
    return "bar method";
  }
}

Foo.bar = "bar field";
print Foo.bar; // prints: bar field
Foo.bar(); // error: 'string' value is not callable
